# Quake4Doom

./: README.md  readme.md
src/: CMakeLists.txt  _Common.props  _DoomDLL.props  curllib.vcxproj  doomdll.vcxproj  doomdll.vcxproj.filters  game.vcxproj  game.vcxproj.filters  idlib.vcxproj  idlib.vcxproj.filters  q4sdk.sln
src/MayaImport/: maya_main.cpp
src/aas/: AASBuild.cpp  AASBuild_file.cpp  AASBuild_gravity.cpp  AASBuild_ledge.cpp  AASBuild_merge.cpp  AASFile.cpp  AASFile.h  AASReach.cpp
src/bse/: BSE.h  BSEInterface.h  BSE_API.h  BSE_Effect.cpp  BSE_EffectTemplate.cpp  BSE_Envelope.h  BSE_Envelopes.cpp  BSE_Manager.cpp  BSE_Module.cpp  BSE_ParseParticle2.cpp  BSE_Particle.cpp  BSE_Particle.h  BSE_Segment.cpp  BSE_SegmentRuntime.cpp  BSE_SegmentTemplate.cpp  BSE_SpawnDomains.cpp
src/cm/: CollisionModel.cpp  CollisionModel.h  CollisionModel_contacts.cpp  CollisionModel_contents.cpp  CollisionModel_debug.cpp  CollisionModel_files.cpp  CollisionModel_load.cpp  CollisionModel_local.h  CollisionModel_rotate.cpp  CollisionModel_trace.cpp  CollisionModel_translate.cpp
src/framework/: BuildDefines.h  CVarSystem.cpp  CVarSystem.h  CmdSystem.cpp  CmdSystem.h  Common.cpp  Common.h  Compressor.cpp  Compressor.h  Console.cpp  DeclAF.cpp  DeclEntityDef.cpp  DeclLipSync.cpp  DeclManager.cpp  DeclMatType.cpp  DeclPlayback.cpp  DeclPlayerModel.cpp  DeclSkin.cpp  DeclTable.cpp  DemoFile.cpp  EditField.cpp  EventLoop.cpp  File.cpp  File.h  FileSystem.cpp  FileSystem.h  KeyInput.cpp  Session.cpp  Session.h  Session_local.h  Session_menu.cpp  Unzip.cpp  UsercmdGen.cpp  UsercmdGen.h  declAF.h  declEntityDef.h  declLipSync.h  declManager.h  declMatType.h  declSkin.h  (+2 more)
src/framework/async/: AsyncClient.cpp  AsyncNetwork.cpp  AsyncServer.cpp  AsyncServer.h  MsgChannel.cpp  MsgChannel.h  NetworkSystem.cpp  NetworkSystem.h  ServerScan.cpp
src/game/: AF.cpp  AFEntity.cpp  Actor.cpp  Actor.h  BrittleFracture.cpp  Camera.cpp  Camera.h  Effect.cpp  Entity.cpp  Entity.h  FreeView.cpp  Game.h  GameEdit.cpp  Game_Debug.cpp  Game_Log.cpp  Game_local.cpp  Game_local.h  Game_network.cpp  Game_render.cpp  Healing_Station.cpp  IK.cpp  Icon.cpp  IconManager.cpp  Instance.cpp  Item.cpp  Item.h  Light.cpp  LipSync.cpp  Misc.cpp  Moveable.cpp  Mover.cpp  MultiplayerGame.cpp  MultiplayerGame.h  Playback.cpp  Player.cpp  Player.h  PlayerView.cpp  Player_Cheats.cpp  Player_States.cpp  Projectile.cpp  (+10 more)
src/game/ai/: AAS.cpp  AAS.h  AASCallback_AvoidLocation.cpp  AASCallback_FindCoverArea.cpp  AAS_Find.cpp  AAS_debug.cpp  AAS_local.h  AAS_pathing.cpp  AAS_routing.cpp  AAS_tactical.cpp  AI.cpp  AI_Actions.cpp  AI_Announcements.cpp  AI_Debug.cpp  AI_Manager.cpp  AI_Medic.cpp  AI_Move.cpp  AI_States.cpp  AI_Tactical.cpp  AI_Util.cpp  AI_events.cpp  AI_pathing.cpp  Monster_Berserker.cpp  Monster_BossBuddy.cpp  Monster_BossMakron.cpp  Monster_ConvoyGround.cpp  Monster_ConvoyHover.cpp  Monster_FailedTransfer.cpp  Monster_Fatty.cpp  Monster_Gladiator.cpp  Monster_Grunt.cpp  Monster_Gunner.cpp  Monster_Harvester.cpp  Monster_HarvesterDispersal.cpp  Monster_HeavyHoverTank.cpp  Monster_IronMaiden.cpp  Monster_LightTank.cpp  Monster_NetworkGuardian.cpp  Monster_RepairBot.cpp  Monster_Scientist.cpp  (+12 more)
src/game/anim/: Anim.cpp  Anim.h  Anim_Blend.cpp  Anim_Import.cpp  Anim_Testmodel.cpp
src/game/bots/: Bot.cpp  Bot.h  BotAI.cpp  BotAI_Battle_Attacked.cpp  BotAI_Battle_Chase.cpp  BotAI_Battle_Fight.cpp  BotAI_Battle_NBG.cpp  BotAI_Battle_Retreat.cpp  BotAI_SeekLTG.cpp  BotAI_Seek_NBG.cpp  BotAI_respawn.cpp  Bot_Input.cpp  Bot_char.cpp  Bot_chat.cpp  Bot_goal.cpp  Bot_goal.h  Bot_weapons.cpp  Bot_weights.cpp
src/game/client/: ClientAFEntity.cpp  ClientEffect.cpp  ClientEntity.cpp  ClientModel.cpp  ClientMoveable.cpp
src/game/gamesys/: Class.cpp  Class.h  DebugGraph.cpp  Event.cpp  Event.h  SaveGame.cpp  State.cpp  SysCmds.cpp  SysCvar.cpp
src/game/mp/: Buying.cpp  Buying.h  CTF.cpp  GameState.cpp  Tourney.cpp  Tourney.h  VoiceComms.cpp
src/game/physics/: Clip.cpp  Clip.h  Force.cpp  Force_Constant.cpp  Force_Drag.cpp  Force_Field.cpp  Force_Spring.cpp  Physics.cpp  Physics_AF.cpp  Physics_Actor.cpp  Physics_Base.cpp  Physics_Monster.cpp  Physics_Parametric.cpp  Push.cpp  (+6 more)
src/idlib/: Base64.cpp  BitMsg.cpp  BitMsg.h  CmdArgs.cpp  Dict.cpp  Heap.cpp  Heap.h  LangDict.cpp  Lexer.cpp  Lexer.h  LexerFactory.cpp  Lib.cpp  Lib.h  Parser.cpp  Parser.h  Str.cpp  Str.h  Swap.h  Timer.cpp  TimingCollection.cpp  Token.cpp  mapfile.cpp  precompiled.cpp  precompiled.h  rvHeap.cpp  rvHeapArena.cpp  rvMemSys.cpp
src/opengl/: gl_d3d12arb.cpp  gl_d3d12arb.h  gl_d3d12raylight.cpp  gl_d3d12shim.cpp  gl_d3d12tess.cpp  gl_d3d12wgl.cpp  glu.cpp  opengl.h  opengl.vcxproj  opengl.vcxproj.filters
src/renderer/: BinaryImage.cpp  BinaryImage.h  Cinematic.cpp  GuiModel.cpp  Image.h  ImageManager.cpp  ImageOpts.h  Image_files.cpp  Image_init.cpp  Image_intrinsic.cpp  Image_load.cpp  Image_process.cpp  Image_program.cpp  Interaction.cpp  Interaction.h  Material.cpp  Material.h  MegaTexture.cpp  Model.cpp  Model.h  ModelDecal.cpp  ModelDecal.h  ModelManager.cpp  ModelManager.h  ModelOverlay.cpp  ModelOverlay.h  Model_ase.cpp  Model_beam.cpp  Model_liquid.cpp  Model_local.h  Model_lwo.cpp  Model_ma.cpp  Model_md3.cpp  Model_md5.cpp  Model_prt.cpp  Model_sprite.cpp  RenderEntity.cpp  RenderSystem.cpp  RenderSystem.h  RenderSystem_init.cpp  (+59 more)
src/sound/: SoundVoice.cpp  WaveFile.cpp  snd_cache.cpp  snd_decoder.cpp  snd_efxfile.cpp  snd_emitter.cpp  snd_local.h  snd_shader.cpp  snd_system.cpp  snd_wavefile.cpp  snd_world.cpp  sound.h
src/sys/: sys_local.cpp  sys_local.h  sys_public.h
src/tools/: edit_stub.cpp
src/ui/: BindWindow.cpp  ChoiceWindow.cpp  DeviceContext.cpp  EditWindow.cpp  FieldWindow.cpp  GameBearShootWindow.cpp  GameBustOutWindow.cpp  GameSSDWindow.cpp  GameWindow.cpp  GuiScript.cpp  GuiScript.h  ListGUI.cpp  ListGUI.h  ListWindow.cpp  MarkerWindow.cpp  RegExp.cpp  RenderWindow.cpp  SimpleWindow.cpp  SimpleWindow.h  SliderWindow.cpp  UserInterface.cpp  UserInterface.h  UserInterfaceLocal.h  Window.cpp  Window.h  Winvar.cpp  Winvar.h
(+398 files in other folders)
